@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.1-6
-Date: 2008-5-8
+Version: 1.1-7
+Date: 2008-6-4
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
